--- a/task3/graphMake.ipynb
+++ b/task3/graphMake.ipynb
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -321,15 +321,15 @@
     "\n",
     "do_plot(20, 20, df.index, df[['tBB', 'tDC', 'tDW']], \n",
     "        \"poměr kapacity batohu k sumární váze\", \"průměrný čas řešení instance (ms)\", ['branch and bound', 'price decomposition', 'weight decomposition'], \n",
-    "        \"GME.pdf\", 30, 1)\n",
+    "        \"mE.pdf\", 30, 1)\n",
     "do_plot(20, 20, df.index, df[['tH']], \n",
     "        \"poměr kapacity batohu k sumární váze\", \"průměrný čas řešení instance (ms)\", ['heuristika'], \n",
-    "        \"GMH.pdf\", 100, 1)"
+    "        \"mH.pdf\", 100, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -359,12 +359,12 @@
     "\n",
     "do_plot(20, 20, df.index, df[['avgE', 'maxE']], \n",
     "        \"poměr kapacity batohu k sumární váze\", \"relativní chyba\", ['průměrná chyba', 'maximální chyba'], \n",
-    "        \"GMHE.pdf\",30 , 1)"
+    "        \"mHE.pdf\",30 , 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -399,15 +399,15 @@
     "\n",
     "do_plot(20, 20, df.index, df[['tBB', 'tDC', 'tDW']], \n",
     "        \"max. váha věci\", \"průměrný čas řešení instance (ms)\", ['branch and bound', 'price decomposition', 'weight decomposition'], \n",
-    "        \"GME.pdf\", 30, 1)\n",
+    "        \"WE.pdf\", 30, 1)\n",
     "do_plot(20, 20, df.index, df[['tH']], \n",
     "        \"max. váha věci\", \"průměrný čas řešení instance (ms)\", ['heuristika'], \n",
-    "        \"GMH.pdf\", 100, 1)"
+    "        \"WH.pdf\", 100, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -437,12 +437,12 @@
     "\n",
     "do_plot(20, 20, df.index, df[['avgE', 'maxE']], \n",
     "        \"max. váha věci\", \"relativní chyba\", ['průměrná chyba', 'maximální chyba'], \n",
-    "        \"GMHE.pdf\",30 , 1)"
+    "        \"WHE.pdf\",30 , 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -477,15 +477,15 @@
     "\n",
     "do_plot(20, 20, df.index, df[['tBB', 'tDC', 'tDW']], \n",
     "        \"max. cena věci\", \"průměrný čas řešení instance (ms)\", ['branch and bound', 'price decomposition', 'weight decomposition'], \n",
-    "        \"GME.pdf\", 30, 1)\n",
+    "        \"CE.pdf\", 30, 1)\n",
     "do_plot(20, 20, df.index, df[['tH']], \n",
     "        \"max. cena věci\", \"průměrný čas řešení instance (ms)\", ['heuristika'], \n",
-    "        \"GMH.pdf\", 100, 1)"
+    "        \"CH.pdf\", 100, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +515,7 @@
     "\n",
     "do_plot(20, 20, df.index, df[['avgE', 'maxE']], \n",
     "        \"max. cena věci\", \"relativní chyba\", ['průměrná chyba', 'maximální chyba'], \n",
-    "        \"GMHE.pdf\",30 , 1)"
+    "        \"CHE.pdf\",30 , 1)"
    ]
   },
   {
