--- a/task3/zprava/zprava.tex
+++ b/task3/zprava/zprava.tex
@@ -123,16 +123,70 @@ Na grafech \ref{fig:GOEI} je ukázána průměrná a maximální chyba heuristic
     \end{figure} 
     
 \subsection{Závislost na poměru součtu vah předmětů k nosnosti batohu}
-\subsection{Závislost na maximální ceně předmětů}
-\subsection{Závislost na maximální váze předmětů}
-
-
-
+\begin{figure}
+	\centering
+    \begin{minipage}[c]{0.49\textwidth}
+        \centering\includegraphics[width=\textwidth]{img/mE.pdf} 
+    \end{minipage}
+    \begin{minipage}[c]{0.49\textwidth}
+        \centering \includegraphics[width=\textwidth]{img/mH.pdf} 
+    \end{minipage}
+    \\
+   \caption{Na grafech je ukázána vždy průměrná a maximální chyba heuristiky v závislosti na granularitě instance. Na levém grafu pro převahu malých instancí a na převém grafu pro převahu velkých instancí.}\label{fig:GOEI}
+    \end{figure} 
+    
+    
 
 \begin{figure}[h]\centering
-	\includegraphics[scale=0.2]{img/GMHE}
+	\includegraphics[scale=0.2]{img/mHE}
  	\caption[1]{Brute-force ve srovnání s dynamickým programováním s dekompozicí podle ceny. Časová náročnost. Na grafu jsou průměrné hodnoty.}\label{fig:1}
  \end{figure} 	
+
+\subsection{Závislost na maximální ceně předmětů}
+
+\begin{figure}
+	\centering
+    \begin{minipage}[c]{0.49\textwidth}
+        \centering\includegraphics[width=\textwidth]{img/CE.pdf} 
+    \end{minipage}
+    \begin{minipage}[c]{0.49\textwidth}
+        \centering \includegraphics[width=\textwidth]{img/CH.pdf} 
+    \end{minipage}
+    \\
+   \caption{Na grafech je ukázána vždy průměrná a maximální chyba heuristiky v závislosti na granularitě instance. Na levém grafu pro převahu malých instancí a na převém grafu pro převahu velkých instancí.}\label{fig:GOEI}
+    \end{figure} 
+
+
+\subsection{Závislost na maximální váze předmětů}
+
+\begin{figure}
+	\centering
+    \begin{minipage}[c]{0.49\textwidth}
+        \centering\includegraphics[width=\textwidth]{img/WE.pdf} 
+    \end{minipage}
+    \begin{minipage}[c]{0.49\textwidth}
+        \centering \includegraphics[width=\textwidth]{img/WH.pdf} 
+    \end{minipage}
+    \\
+   \caption{Na grafech je ukázána vždy průměrná a maximální chyba heuristiky v závislosti na granularitě instance. Na levém grafu pro převahu malých instancí a na převém grafu pro převahu velkých instancí.}\label{fig:GOEI}
+    \end{figure} 
+        
+    
+\begin{figure}
+	\centering
+    \begin{minipage}[c]{0.49\textwidth}
+        \centering\includegraphics[width=\textwidth]{img/WHE.pdf} 
+    \end{minipage}
+    \begin{minipage}[c]{0.49\textwidth}
+        \centering \includegraphics[width=\textwidth]{img/CHE.pdf} 
+    \end{minipage}
+    \\
+   \caption{Na grafech je ukázána vždy průměrná a maximální chyba heuristiky v závislosti na granularitě instance. Na levém grafu pro převahu malých instancí a na převém grafu pro převahu velkých instancí.}\label{fig:GOEI}
+    \end{figure} 
+    
+   
+
+
 
 
 \section{Závěr}
