--- a/task3/zprava/zprava.tex
+++ b/task3/zprava/zprava.tex
@@ -40,22 +40,19 @@
 \end{itemize}
 
 \section{Rozbor řešení}\label{kap:1}
-Pro určení a sledování citlivosti na různé instance problému jsem využil generátor náhodných instancí, u které lze nastavovat jednotlivé parametry. U instancí problému jsou nastavovány parametry jako granulalita, maximální cena, maximální váha a poměr sumární váhy ke kapacitě batohu. Pokusím se odhadnout chování algoritmů při změnách parametrů jednotlivých instancí. Tedy sledovat citlivost algoritmů na dané parametry. 
+Pro určení a sledování citlivosti na různé instance problému jsem využil generátor náhodných instancí, u kterého lze nastavovat jednotlivé parametry. U instancí problému jsou nastavovány parametry jako granulalita, maximální cena, maximální váha a poměr sumární váhy ke kapacitě batohu. Pokusím se odhadnout chování algoritmů při změnách parametrů jednotlivých instancí. Tedy sledovat citlivost algoritmů na dané parametry. 
 \subsection{Metoda hrubé síly}
 Medota hrubé síly nebude v tomto experimentu zkoumána, protože je zřejmé, že pokaždé projde všechny instance a tedy vubec není citlivá na jiné parametry, kromě paramentru n, který ale již by prozkoumán v 1. a 2. úloze.
 
 
 \subsection{Metoda větví a hranic (B\&B)} 
-U této metody očekávám velkou čitlivost na poměr celkové váhy a kapacity batohu, dále by metody mohla ovlivnit granularita. Tato metoda nemá horní mez a proto její čas může narůst až na metody hrubé síly. 
+U této metody očekávám velkou citlivost na poměr celkové váhy a kapacity batohu, dále by metody mohla ovlivnit granularita. Tato metoda nemá horní mez a proto její čas může narůst až na hodnotu metody hrubé síly. 
 
 \subsection{Metody dynamického programování (obě dekompozice)}
-U dekompozic očekávám citlivost vždy na daný parametr. U dekompozice podle ceny tedy citlivost na maximální cenu a u dekompozice podle váhy na maximální váhu. 
+U dekompozic očekávám citlivost vždy na daný parametr, podle kterého je dekompozice prováděna. U dekompozice podle ceny tedy citlivost na maximální cenu a u dekompozice podle váhy na maximální váhu. 
 
 \subsection{Řešení heuristikou poměr cena/váha}
 Očekávám, že heuristická metoda bude datově citlivá a to především na paramentry jako poměr celkové váhy a kapacity batohu nebo granularita. Vliv maximální ceny a váhy neočekávám.
-
-
-
 
 \section{Popis kostry algoritmu}\label{kap:2}
 Všechny algoritmy a průběh experimentu, zůstali stejné jako v úloze 2. Byli pouze změněny soubory s instancemi, které byli vygenerovány před experimentem.
@@ -74,6 +71,7 @@ Všechny algoritmy a průběh experimentu, zůstali stejné jako v úloze 2. Byl
     \end{minipage}
     \\
    \caption{Na grafech je zobrazena časová náročnost jednotlivých medod v závislosti na granularitě instance. Zde jsou uvedeny grafy pro převahu velkých instancí, kde k je exponent z generátoru náhodných instancích, který určuje pravděpodobnost přijetí daného předmětu.}\label{fig:GVI}
+   
     \end{figure} 
     
     \begin{figure}
@@ -92,9 +90,27 @@ Všechny algoritmy a průběh experimentu, zůstali stejné jako v úloze 2. Byl
  
  
 Experimenty jsem prováděl v režimu jednoho vlákna na starším datovém serveru v podobě starého notebooku, který v době výpočtu nebyl používán. Výsledky tedy nejsou ovlivněny jinými běžícími programy. Procesor na testovacím stroji: \textit{Intel Pentium T3400 (2 cores). Taktován na 2.16~GHz s~1~MB cache}.
-Měření času CPU probíhalo v knihovně $timeit$ s tidíci násobným průchodem pro jednotlivá měření pro přesnost měření.
+Měření času CPU probíhalo v knihovně $timeit$ s tisíci násobným průchodem pro jednotlivá měření pro přesnost měření.
 
-Pro každý parametr bylo vygenerováno 100 instancí o počtu předmětů 27. Na grafech jsem vždy rozdělil exaktní metody a heuristiku z důvodu nízkých časů u heuristiky, u které by nebyly rozdíly s exaktními metodami vůbec ukázatelné. 
+Pro každý parametr bylo vygenerováno 100 instancí o počtu předmětů 27. Ostatní základní parametry jsem uvedl v tabulce \ref{tab:GVI}. Při jednotlivých experimentech byl vždycky měněn jeden parametr. Na grafech jsem vždy rozdělil exaktní metody a heuristiku z důvodu nízkých časů u heuristiky, u které by nebyly rozdíly s exaktními metodami vůbec ukázatelné. 
+
+\begin{table}[h]
+\centering
+    \begin{tabular}{ |l|l| } 
+        \hline
+        Parametr & Hodnota \\
+        \hline
+        \hline
+        Poměr kapacity batohu k sumární váze & $0.5$ \\
+        Maximální váha věci & $50$ \\
+        Maximální cena věci & $50$ \\
+        Exponent $k$ & $1$ \\
+        Velké nebo malé věci v batohu & $0$ \\
+        \hline
+    \end{tabular}
+    \caption{Tabulka základního nastavení parametrů generátoru.}\label{tab:GVI}
+\end{table} 
+ 
 
 
 \subsection{Závislost na granularitě instance}
@@ -106,7 +122,7 @@ Na grafu \ref{fig:GMI} vidíme porovnání pro převahu malých věcí. I zde js
 
 Citlivost u dekompozic bych si také mohl vysvětlit jako citlivost na celkovou sumu váhy nebo ceny podle druhu dekompozice. Protože převaha velkých nebo malých předmětů tuto sumu ovlivní. Citlivost na tyto parametry prozkoumáme v další podkapitole.
 
-U heuristické metody na grafech můžeme fidět veliký rozptyl hodnot. Její závislost na granularitě se tady nepotvrdila. O této metodě bych tedy neřekl, že její výkonost ovlivní granularita jednotlivých instancí.
+U heuristické metody na grafech můžeme vidět veliký rozptyl hodnot. Její závislost na granularitě se tady nepotvrdila. O této metodě bych tedy neřekl, že její výkonost ovlivní granularita jednotlivých instancí.
 
 Na grafech \ref{fig:GOEI} je ukázána průměrná a maximální chyba heuristické metody při změnách granularity instancí. Zde není patrná témě žádná závislost chyby na granularitě instance. Při podrobnější zkoumální hodnot maxim, by možná bylo možné říct, že maximální chyba klesá s převahou malých i velkých předmětů, ale tento trend by bylo nutné podrobněji prozkoumat a podrobit mnohem větší analýze.
  
@@ -123,6 +139,14 @@ Na grafech \ref{fig:GOEI} je ukázána průměrná a maximální chyba heuristic
     \end{figure} 
     
 \subsection{Závislost na poměru součtu vah předmětů k nosnosti batohu}
+Pro tento parametr jsem očekával největší citlivost u metody větví a hranic. Tato citlivost se potvrdila a je patná na grafu \ref{fig:mI}. Je tedy zjevné, že metoda selhává v momentě, kdy se optimální řešení skládá z většího počtu předmětů. Také je na grafu vidět pád pro hodnotu 1. Tento jev je očekávaný z implementace. V rekurzivním volání se snažím předmět přidávat dokud nedojde k prořezu a v tomto případě končí po přidání všech předmětů.
+
+Pro dynamické programování se výpočetní náročnost také zvyšuje. Toto může být způsobeno tím, že přestává být tak učínné prořezání a je nutné projít více větví rekurze.
+
+Pro heuristiku je také patrný trend, že výpočetní čas roste s poměrem, ale v tomto případě nejsou rozdíly v náročnosti tak velké.
+
+Pro chybu na grafu \ref{fig:mEI} je jasně patrný klesající trend, tedy že chyba je závislá na poměru sumární váhy ke kapacitě batohu. Čím výšší je poměr, tím menší je chyba, protože klesá i pravděpodobnost toho, že předmět nebude v řešení. Nulová chyba pro poměr 1 je očekávána, neboť jsou přídány všechny předmětu do batohu.
+
 \begin{figure}
 	\centering
     \begin{minipage}[c]{0.49\textwidth}
@@ -132,17 +156,23 @@ Na grafech \ref{fig:GOEI} je ukázána průměrná a maximální chyba heuristic
         \centering \includegraphics[width=\textwidth]{img/mH.pdf} 
     \end{minipage}
     \\
-   \caption{Na grafech je ukázána vždy průměrná a maximální chyba heuristiky v závislosti na granularitě instance. Na levém grafu pro převahu malých instancí a na převém grafu pro převahu velkých instancí.}\label{fig:GOEI}
+   \caption{Na grafech je vidět závislost výpočetní náročnosti na poměru součtu vah a nosnosti batohu. Vlevo pro exaktní metody a vpravo pro heuristiku.}\label{fig:mI}
     \end{figure} 
     
     
 
-\begin{figure}[h]\centering
-	\includegraphics[scale=0.2]{img/mHE}
- 	\caption[1]{Brute-force ve srovnání s dynamickým programováním s dekompozicí podle ceny. Časová náročnost. Na grafu jsou průměrné hodnoty.}\label{fig:1}
+\begin{figure}\centering
+	\includegraphics[scale=0.14]{img/mHE}
+ 	\caption[1]{Relativní chyba heuristiky v závislosti na poměru součtu vah a nosnosti batohu.}\label{fig:mEI}
  \end{figure} 	
 
 \subsection{Závislost na maximální ceně předmětů}
+
+Z grafu \ref{fig:WI} je vidět závislost výpočetní náročnosti na maximální ceně věcí. Zde je opět vidět očekáváný nárůst složitosti u dekompozice podle ceny. Výpočetní náročnost je závislá na tomto parametru, z důvodu akolování prostředků pro tabulku dynamického programování. Tabulka má rozměr v závislosti na součtu vah všech předmětů a počtu předmětů.
+
+Na grafu heuristiky je patrný trend, ale ve velmi malém rozsahu časů, ale i tak s roztoucí váhou to vypadá, že se snižuje výpočetní náročnost. Tuto závislost by bylo nutné prozkoumat podrobněji na větších instancích, zdali se tento trend stále projevuje.
+
+Na grafu \ref{fig:WCEI} vpravo je zobrazena relativní chyba v závislosti na parametru maximální ceny. Z velkého rozptylu v grafu je patrné, že chyba není závislá na maximální váze. 
 
 \begin{figure}
 	\centering
@@ -153,11 +183,17 @@ Na grafech \ref{fig:GOEI} je ukázána průměrná a maximální chyba heuristic
         \centering \includegraphics[width=\textwidth]{img/CH.pdf} 
     \end{minipage}
     \\
-   \caption{Na grafech je ukázána vždy průměrná a maximální chyba heuristiky v závislosti na granularitě instance. Na levém grafu pro převahu malých instancí a na převém grafu pro převahu velkých instancí.}\label{fig:GOEI}
+   \caption{Na grafech je vidět závislost výpočetní náročnosti na maximální ceně předmětu. Vlevo pro exaktní metody a vpravo pro heuristiku.}\label{fig:WI}
     \end{figure} 
 
 
 \subsection{Závislost na maximální váze předmětů}
+
+Závislost na maximální ceně je zobrazena na grafu \ref{fig:CI}. Je zde jasně patrné, že na tomto parametru je závislá dekompozice podle váhy, kde její čas velice rychle nárůstá. Ostatní exaktní metody nejsou závislé na maximální váze předmětu. 
+
+Heuristika z grafu vypadá, že na maximální váhu citlivá není. Ale test nebyl prveden v tak velkém rozsahu, aby bylo možné stanovit jasný závěr.
+
+Na grafu \ref{fig:WCEI} vlevo je zobrazena relativní chyba v závislosti na parametru maximální váhy. Z velkého rozptylu v grafu je patrné, že chyba není závislá na maximální váze. 
 
 \begin{figure}
 	\centering
@@ -168,7 +204,7 @@ Na grafech \ref{fig:GOEI} je ukázána průměrná a maximální chyba heuristic
         \centering \includegraphics[width=\textwidth]{img/WH.pdf} 
     \end{minipage}
     \\
-   \caption{Na grafech je ukázána vždy průměrná a maximální chyba heuristiky v závislosti na granularitě instance. Na levém grafu pro převahu malých instancí a na převém grafu pro převahu velkých instancí.}\label{fig:GOEI}
+   \caption{Na grafech je vidět závislost výpočetní náročnosti na maximální váze předmětu. Vlevo pro exaktní metody a vpravo pro heuristiku.}\label{fig:CI}
     \end{figure} 
         
     
@@ -181,7 +217,7 @@ Na grafech \ref{fig:GOEI} je ukázána průměrná a maximální chyba heuristic
         \centering \includegraphics[width=\textwidth]{img/CHE.pdf} 
     \end{minipage}
     \\
-   \caption{Na grafech je ukázána vždy průměrná a maximální chyba heuristiky v závislosti na granularitě instance. Na levém grafu pro převahu malých instancí a na převém grafu pro převahu velkých instancí.}\label{fig:GOEI}
+   \caption{Na grafech je ukázána vždy průměrná a maximální chyba heuristiky v závislosti maximální váze předmětů (vlevo) a maximální ceně předmětů(vpravo). Na levém grafu pro převahu malých instancí a na převém grafu pro převahu velkých instancí.}\label{fig:WCEI}
     \end{figure} 
     
    
@@ -190,7 +226,17 @@ Na grafech \ref{fig:GOEI} je ukázána průměrná a maximální chyba heuristic
 
 
 \section{Závěr}
-Během experimentu jsem otestoval velké množství instancí s různými parametry a sledoval citlivost algoritmů na tyto parametry. Byli pozorovány časy exaktních algoritmů a u heuristiky byla také měřena relativní chyba. 
+Během experimentu jsem otestoval velké množství instancí s různými parametry a sledoval citlivost algoritmů na tyto parametry. Byly pozorovány časy exaktních algoritmů a u heuristiky byla také měřena relativní chyba v závislosti na změnách konkrétních parametrů instancí. 
+
+Podle předpokladů se ukázala metoda větví a hranic citlivá na poměr sumy vah a kapacity batohu, se zvyšujícím se poměrem rostla náročnost a výpočetní složitost této metody. Až pro hodnotu 1 spadl čas na minimum, protože metoda přidá všechy předměty. Na tento poměr se také ukázala být citlivá heuristická metoda a to především co se týče relativní chyby, která klesala se snižujících se poměrem. 
+
+V algoritmech se také projevuje nepatrně koeficient granularity, ale pouze minimálně. Na relativní chyby heuristiky vliv nemá. 
+
+Dále se projevila závislost jednotlivých dekompozicích vždy na parametru podle kterého je prováděna. Tato znalost by nám mohla při analýze problému pomoc vybrat správný algoritmus pro minimalizaci výpočetní náročnosti. 
+
+Velice zajímavé bylo oproti úkolu 2, že se metoda větví a hranic vykazovala větší náročnost než dynamické programování, oproti poznatku z úkolu 2 na referenčních instancí. Tento poznatek bych připsal zvolenému základnímu poměru součtu vah předmětů k nosnosti batohu. Ten činil 0.5 a tato metoda se na tento poměr ukázala velice citlivá.
+
+Náměřené hodnoty však slouží pouze jako podpůrné argumety i přes větší množství instancí a velké množství opakování. Míra důvěry v naměřené data však souvisí na způsobu provádění experimentu a generovaných datech. 
 
 
 \end{document}
